# R-Type

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTE.md  Dockerfile  README.md  build.sh  create-release.sh  install-apt.sh  install-dnf.sh  install-windows.bat  install.bat  launch-server.sh  prepare.bat  prepare.sh  rtype_client
.dnp/: send_udp_msg.py
.github/workflows/: main.yaml  pipeline.yaml
.scripts/: commit-message-check.sh
RayLibExternalIncludes/: raygui.h  rlights.h
Tools/Clock/: Clock.hpp  IClock.hpp
Tools/ECS/Managers/Components/: Component.hpp  ComponentArray.hpp  ComponentStructs.hpp  Components.hpp  ComponentsManager.hpp  ProjectileFunctions.hpp
Tools/ECS/Managers/Coordinator/: Coordinator.hpp
Tools/ECS/Managers/Entities/: EntitiesManager.hpp  Entity.hpp
Tools/ECS/Managers/Systems/: Cam.hpp  DrawModel.hpp  Move.hpp  MultipleLink.hpp  Particle.hpp  ParticlesEmitter.hpp  Play.hpp  Projectile.hpp  Shoot.hpp  Skybox.hpp  System.hpp  SystemsManager.hpp  Traveling.hpp  UniqueLink.hpp
Tools/Error/: Error.hpp
Tools/Utils/: Utils.cpp  Utils.hpp
Tools/Vec3/: IVec3.hpp  Vec3.cpp  Vec3.hpp
Tools/Vec4/: IVec4.hpp  Vec4.cpp  Vec4.hpp
client/: README.md  main.cpp
client/Managers/Components/: ComponentsManager.hpp
client/Managers/Entities/: EntitiesManager.hpp
client/Managers/Systems/: SystemsManager.hpp
client/Tools/ECS/Managers/Components/: ComponentStructs.hpp
client/Tools/ECS/Managers/Coordinator/: Coordinator.hpp
client/Tools/ECS/Managers/Entities/: EntitiesManager.hpp  Entity.hpp
client/Tools/ECS/Managers/Systems/: AutoMove.hpp  Bdb.hpp  Cam.hpp  DrawModel.hpp  Lights.hpp  Modal.cpp  Modal.hpp  ModelAnimation.hpp  Move.hpp  Music.hpp  Particle.hpp  Play.hpp  Projectile.hpp  SelfDestruct.hpp  ShaderUpdater.hpp  Shoot.hpp  Sound.hpp  Velocity.hpp
client/Tools/Utils/: Utils.hpp
client/Tools/Vec3/: Vec3.cpp  Vec3.hpp
client/Tools/Vec4/: IVec4.hpp  Vec4.hpp
client/include/: rlights.h
client/resources/models/: bonus_boost_health.glb  bonus_boost_power.glb  bonus_boost_shield.glb  bonus_boost_weapon.glb  bonus_boost_weapon_v2.glb  borboleta_azul_-_butterfly.glb  boss2.glb  boss_body.glb  boss_body2.glb  cyber_wasp.glb  low_poly_monster.glb  low_poly_spider.glb  missile.glb  mob.glb  mob3.glb  mob4.glb  mod5.glb  obstacle.glb  obstacle2.glb  player.glb  player2.glb  player3.glb  player4.glb  player5.glb  ship.glb  spaceship2.glb  spiked_cube.glb  untitled.glb  untitled2.fbx  vivinsect.glb
client/resources/shaders/: blur.fs  lighting.fs  particle.fs  particle.vs
client/src/: Core.cpp  Core.hpp  IListener.hpp  Listener.hpp  Menu.cpp  Menu.hpp  main.cpp
client/src/ECS/Managers/Components/: ComponentsManager.hpp
client/src/ECS/Managers/Entities/: EntitiesManager.hpp
client/src/ECS/Managers/Systems/: SystemsManager.hpp
client/src/UdpClient/: IUdpClient.hpp  UdpClient.cpp  UdpClient.hpp  entrypoint.cpp
client/src/renderer/: Audio.hpp  AudioStream.hpp  Camera.hpp  Camera2D.hpp  Cursor.hpp  Event.hpp  Font.hpp  IAudio.hpp  IAudioStream.hpp  ICamera.hpp  ICamera2D.hpp  ICursor.hpp  IEvent.hpp  IFont.hpp  IImage.hpp  IMaterial.hpp  IMesh.hpp  IMode.hpp  IModel.hpp  IModelAnimation.hpp  IMusic.hpp  IRay.hpp  IRenderTexture.hpp  IShader.hpp  ISound.hpp  ITexture.hpp  IWave.hpp  IWindow.hpp  Image.hpp  Material.hpp  Mesh.hpp  Mode.hpp  Model.hpp  ModelAnimation.hpp  Music.hpp  Ray.hpp  RenderTexture.hpp  Shader.hpp  Sound.hpp  Texture.hpp  (+4 more)
map_editor/: CMakeLists.txt  README.md  main.cpp  map_editor.cpp  map_editor.h  map_editor.hpp  map_test.json  test_lib_json.cpp  test_lib_json.h  test_lib_json.hpp
map_editor/Tools/Vec3/: IVec3.hpp  Vec3.cpp
map_editor/src/: ILevelGenerator.hpp  LevelGenerator.cpp  LevelGenerator.hpp  main.cpp  map_editor.cpp  map_editor.hpp
protocol/: EntityData.hpp  PROTOCOL.md  Protocol.hpp  README.md
server/: README.md  main.cpp
server/Tools/Clock/: Clock.hpp  IClock.hpp
server/Tools/ECS/Managers/Components/: ComponentArray.hpp  ComponentStructs.hpp  ComponentsManager.hpp
server/Tools/ECS/Managers/Entities/: EntitiesManager.hpp  Entity.hpp  IEntitiesManager.hpp
server/Tools/ECS/Managers/Systems/: AutoMove.hpp  ClientUpdater.hpp  Collider.hpp  Enemy.hpp  LvlManager.cpp  LvlManager.hpp  Move.hpp  MultipleLink.hpp  ParentManager.hpp  PlayerManager.hpp  Projectile.hpp  Shoot.hpp  SystemsManager.hpp  Traveling.hpp
server/Tools/Random/: Random.hpp
server/Tools/Utils/: Utils.cpp  Utils.hpp
server/Tools/Vec3/: IVec3.hpp  Vec3.cpp  Vec3.hpp
server/Tools/Vec4/: IVec4.hpp  Vec4.cpp  Vec4.hpp
server/Tools/collisions/: Collisions.cpp  Collisions.hpp
server/map/: LibJson.cpp  LibJson.hpp  Parser.hpp
server/map_parser/: IParser.hpp  Parser.hpp  lib_json.cpp  test_lib_json.cpp  test_lib_json.hpp
server/src/: main.cpp
server/src/AsioWrapper/: AsioWrapper.cpp  AsioWrapper.hpp  IWrapper.hpp
server/src/Client/: Client.cpp  Client.hpp  ClientController.hpp  DeltaManager.hpp  IClient.hpp
server/src/GameController/: GameController.cpp  GameController.hpp  IGameController.hpp
server/src/ServerController/: IServerController.hpp  ServerController.cpp  ServerController.hpp
server/src/ServerController/ArgsManager/: ArgsManager.hpp  IArgsManager.hpp
